--- a/.github/workflows/generate-icons.yml
+++ b/.github/workflows/generate-icons.yml
@@ -17,31 +17,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Generate icons.json (URL array format)
+      - name: Generate icons.json (root array, URL format)
         run: |
           cd icons
-          echo '{' > icons.json
-          echo '  "name": "Qvlmols Icon Set",' >> icons.json
-          echo '  "icons": [' >> icons.json
+          echo '[' > icons.json
           first=true
-          for f in $(find . -type f -name "*.png"); do
-            name=$(echo $f | sed 's|^\./||' | sed 's|\.png$||')  # 去掉前缀和 .png 后缀
-            url="https://raw.githubusercontent.com/${{ github.repository }}/main/icons/$(echo $f | sed 's|^\./||')"
+          # 列出 png 并按名称排序，保证稳定顺序
+          while IFS= read -r f; do
+            rel=$(echo "$f" | sed 's|^\./||')
+            name=$(echo "$rel" | sed 's|\.png$||')
+            url="https://raw.githubusercontent.com/${{ github.repository }}/main/icons/$rel"
             if [ "$first" = true ]; then
               first=false
             else
               echo ',' >> icons.json
             fi
-            printf '    { "name": "%s", "url": "%s" }' "$name" "$url" >> icons.json
-          done
+            printf '  { "name": "%s", "url": "%s" }' "$name" "$url" >> icons.json
+          done < <(find . -type f -name "*.png" | sed 's|^\./||' | sort)
           echo '' >> icons.json
-          echo '  ]' >> icons.json
-          echo '}' >> icons.json
+          echo ']' >> icons.json
 
       - name: Commit and push icons.json
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add icons/icons.json
-          git commit -m "Auto-generate icon set JSON" || echo "No changes to commit"
+          git commit -m "Auto-generate icons.json (array format)" || echo "No changes to commit"
           git push
